--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: install npm
-      uses: actions/checkout@v2
+      uses: actions/checkout@main
       with:
         path: SchoolProjectAPI_typescript
         run: |
