--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,8 @@ jobs:
     steps:
     - name: install npm
       run: |
-        cd ..
+          cd ..
+    - name: install
+      run: |
         npm install
   
