--- a/action.yml
+++ b/action.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Setup Node.js
         uses: omeryttnc/SchoolProjectAPI_typescript@main
         with:
-          node-version: '16'  # or the version you need
+          node-version: '16'  
 
       - name: Install dependencies
         run: npm install
